# cloth-cuda

./: .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md
include/: cloth_mesh.h  constraints.h  material.h  mesh.h  mesh_generator.h  mesh_topology.h  pd_solver.h  sim_constraints.h  stretch_reference.h
scripts/: batch_test.sh  ply_to_png.py  ply_to_png_pyvista.py  render_all_frames.sh  render_cloth.py
src/: CMakeLists.txt  cloth_mesh.cpp  constraints.cpp  main.cpp  mesh.cpp  mesh_generator.cpp  mesh_topology.cpp  pd_solver.cu  sim_constraints.cpp  stretch_reference.cpp
src/shaders/: flat.fs  flat.vs
src/tests/: test_constraints.cpp  test_framework.h  test_mesh.cpp  test_pd_constraints.cpp  test_topology.cpp
src/tools/: gen_cloth.cpp  sim_cloth.cpp  view_cloth.cpp
src/utils/: cuda_helper.h  obj_io.cpp  obj_io.h
src/viewer/: camera.cpp  camera.h  shader.cpp  shader.h  viewer.cpp  viewer.h
src/viewer/glad/: glad.c  glad.h
